# ActuarialDaily

./: .gitignore  _quarto.yml  index.qmd  pyproject.toml
_freeze/posts/making-triangles/index/execute-results/: html.json
_freeze/posts/seasonally-adjusted-triangles/index/execute-results/: html.json
docs/: about.html  index.html  listings.json  search.json
docs/posts/making-triangles/: index.html
docs/posts/post-with-code/: index.html
docs/posts/seasonally-adjusted-triangles/: index.html
docs/posts/welcome/: index.html
posts/making-triangles/: index.qmd
posts/post-with-code/: index.qmd
posts/seasonally-adjusted-triangles/: index.qmd
posts/welcome/: index.qmd
