[project]
name = "testpositron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "polars>=1.13.1",
    "pyarrow>=18.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.7.4",
]
